--- a/InPost_Tracking_Loading.html
+++ b/InPost_Tracking_Loading.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -10,6 +9,15 @@
       background: #f7f7f7;
       margin: 0;
       padding: 0;
+    }
+    .header {
+      text-align: center;
+      background: #4caf50;
+      color: white;
+      padding: 20px;
+      font-size: 28px;
+      font-weight: bold;
+      letter-spacing: 1px;
     }
     .loader-screen {
       position: fixed;
@@ -75,6 +83,8 @@
   </style>
 </head>
 <body>
+  <div class="header">InPost</div>
+
   <div class="loader-screen" id="loader">
     <h2>🔎 Stiamo cercando il tuo pacco...</h2>
     <div class="spinner"></div>
