--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -12,19 +13,30 @@
     }
     .header {
       text-align: center;
-      background: #4caf50;
-      color: white;
-      padding: 20px;
-      font-size: 28px;
+      background: linear-gradient(90deg, #ffd700, #4caf50);
+      color: #fff;
+      padding: 20px 10px 5px 10px;
+      font-size: 32px;
       font-weight: bold;
-      letter-spacing: 1px;
+      letter-spacing: 1.5px;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 10000;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    }
+    .sub-header {
+      font-size: 14px;
+      font-weight: normal;
+      margin-top: 5px;
+      color: #f1f1f1;
     }
     .loader-screen {
       position: fixed;
-      top: 0;
+      top: 70px;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: calc(100% - 70px);
       background: #fff;
       display: flex;
       flex-direction: column;
@@ -48,7 +60,7 @@
     .container {
       display: none;
       max-width: 600px;
-      margin: 100px auto;
+      margin: 120px auto;
       background: #fff;
       padding: 20px;
       border-radius: 12px;
@@ -83,7 +95,10 @@
   </style>
 </head>
 <body>
-  <div class="header">InPost</div>
+  <div class="header">
+    📦 InPost Tracking
+    <div class="sub-header">Avviato con INCS_Team</div>
+  </div>
 
   <div class="loader-screen" id="loader">
     <h2>🔎 Stiamo cercando il tuo pacco...</h2>
@@ -112,11 +127,11 @@
   </div>
 
   <script>
-    // Simula caricamento di 3 secondi prima di mostrare il tracciamento
+    // Simula caricamento di 10 secondi prima di mostrare il tracciamento
     setTimeout(function() {
       document.getElementById("loader").style.display = "none";
       document.getElementById("trackingContent").style.display = "block";
-    }, 3000);
+    }, 10000);
   </script>
 </body>
 </html>
