--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <body>
   <div class="header">
     📦 InPost Tracking
-    <div class="sub-header">Avviato con INCS_Team</div>
+    <div class="sub-header">Spedizione Avviata da INCS_Team</div>
   </div>
 
   <div class="loader-screen" id="loader">
