--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="progress">
       <div class="step completed">✅ Pacco registrato nel sistema</div>
       <div class="step completed">✅ Ritirato dal corriere</div>
-      <div class="step">🚚 In viaggio verso il locker</div>
+      <div class="step completed">✅ In viaggio verso il locker</div>
       <div class="step">📦 In consegna al locker</div>
       <div class="step">📬 Pronto per il ritiro</div>
     </div>
