--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <p><strong>Mittente:</strong> INCS_Team</p>
       <p><strong>Destinatario:</strong> Gianmarco Ferro</p>
       <p><strong>Locker di consegna:</strong> ITPOZ44059M (Stazione ENI, Pozzallo)</p>
-      <p><strong>Consegna prevista:</strong> 12 agosto 2025</p>
+      <p><strong>Consegna prevista:</strong> 12/13 agosto 2025</p>
     </div>
 
     <div class="progress">
