--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <body>
   <div class="header">
     📦 InPost Tracking
-    <div class="sub-header">Spedizione Avviata da INCS_Team</div>
+    <div class="sub-header">Spedizione Avviata da INCS Team</div>
   </div>
 
   <div class="loader-screen" id="loader">
@@ -111,15 +111,15 @@
 
     <div class="details">
       <p><strong>Mittente:</strong> INCS_Team</p>
-      <p><strong>Destinatario:</strong> Denis</p>
-      <p><strong>Locker di consegna:</strong> ITPOZ44059M (Stazione ENI, Pozzallo)</p>
-      <p><strong>Consegna prevista:</strong> 12/13 agosto 2025</p>
+      <p><strong>Destinatario:</strong> Denis /////</p>
+      <p><strong>Locker di consegna:</strong> Castelfranco Veneto TV 31033</p>
+      <p><strong>Consegna prevista:</strong> 1/2 settembre 2025</p>
     </div>
 
     <div class="progress">
       <div class="step completed">✅ Pacco registrato nel sistema</div>
-      <div class="step">📩 Ritirato dal corriere</div>
-      <div class="step">🚚 In viaggio verso il locker</div>
+      <div class="step completed">✅ Ritirato dal corriere</div>
+      <div class="step completed">✅ In viaggio verso il locker</div>
       <div class="step">📦 In consegna al locker</div>
       <div class="step">📬 Pronto per il ritiro</div>
     </div>
